# Rust

./: Cargo.toml  Rocket.toml  diesel.toml  struct e fn.md
db/: database.db
migrations/2024-11-06-182208_create_user/: up.sql
migrations/2024-12-05-173727_create_musics/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
templates/: favorite_songs.html.hbs  greeting.html.hbs  index.html.hbs
